change gitFirst() to get(0)